# qtlearn

./: .gitmodules
labs/ambiance/: CMakeLists.txt  README.md  application.qrc  qtquickcontrols2.conf
labs/ambiance/qml/: main.qml
labs/ambiance/src/: ambiance.cpp  ambiance.hpp  main.cpp  player_loader.cpp  player_loader.hpp  sound.cpp  sound.hpp
labs/basics/: BUILD  README.md  qtquickcontrols2.conf
labs/basics/ambiance/: CMakeLists.txt
labs/basics/ambiance/res/sounds/: convert.sh
labs/basics/ambiance/src/: ambiance.cpp  ambiance.hpp  sound.cpp  sound.hpp
labs/basics/qml/: main.qml
labs/basics/reviser/: CMakeLists.txt  application.qrc
labs/basics/reviser/qml/: main.qml
labs/basics/reviser/src/: main.cpp  reviser.cpp  ticket.cpp  ticket.hpp
labs/basics/src/: main.cpp  reviser.cpp  reviser.hpp  ticket.cpp
